# PolarsIntroduction

./: README.md  dummy_data.csv  pyproject.toml
answers/: assignment 1.py  assignment 2.py
assignments/: Assignment 1.md
