[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["niels.hendrikx <niels.hendrikx@enexis.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.20.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
